添加动态Switch方法